<resources>
    <string name="app_name">HerVoice</string>
    <string name="app_logo">App Logo</string>
    <string name="description">Image Button</string>
    <string name="log_out">Log out</string>
    <string name="your_emergency_contacts">Your Emergency Contacts</string>
    <string name="contact_name_1">Contact Name 1</string>
    <string name="contact_name_2">Contact Name 2</string>
    <string name="contact_name_3">Contact Name 3</string>
    <string name="contact_name_4">Contact Name 4</string>
    <string name="contact_name_5">Contact Name 5</string>
    <string name="hervoice_2025">HerVoice©2025</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_microsoft">Continue with Microsoft</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password"> Enter Password</string>
    <string name="or">______________ or ______________</string>
    <string name="enter_Email"> Enter Email</string>
    <string name="forget_your_password">Forget Your Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="email_2">Email</string>
    <string name="sign_up_1">Sign Up</string>
    <string name="create_your_account_to_start_your_journey_with_us">Create your account to start your journey with us.</string>
    <string name="name_1">Name</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="password_1">Password</string>
    <string name="confirm_password_1">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_1"> Sign In</string>
    <string name="send_alert">Send Alert</string>
    <string name="save">Save</string>
    <string-array name="relationship_options">
        <item>Family</item>
        <item>Friend</item>
        <item>Colleague</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dial_option_1">dial option</string>
    <string name="dial_option_2">dial option</string>
    <string name="dial_option_3">dial option</string>
    <string name="dial_option_4">dial option</string>
    <string name="dial_option_5">dial option</string>
    <string name="sms_alert_option_1">sms alert option</string>
    <string name="sms_alert_option_2">sms alert option</string>
    <string name="sms_alert_option_3">sms alert option</string>
    <string name="sms_alert_option_4">sms alert option</string>
    <string name="sms_alert_option_5">sms alert option</string>
    <string name="alert_sent_successfully">Alert sent successfully!</string>
    <string name="send_location_alert">Send Location Alert</string>
    <string name="real_time_map_view">Real Time Map view</string>
    <string name="with">with</string>
    <string name="_sign_in_">Sign In</string>
    <string name="hervoice_2025_add_contact">HerVoice©2025</string>
    <string name="name_add_contact">Name:</string>
    <string name="phone_number_add_contact">Phone Number:</string>
    <string name="relationship_add_contact">Relationship:</string>
    <string name="sms_alert_add_contact">SMS Alert</string>
    <string name="phone_number_">Phone Number</string>
    <string name="name_add_contact_">Name</string>
    <string name="add_trusted_contact_">Add Trusted Contact</string>
    <string name="edit_trusted_contact">Edit Trusted Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contacts_yet">No contacts yet</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="refresh_contacts">refresh_contacts</string>
    <string name="contacts">Contacts</string>
    <string name="home">Home</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="refresh">refresh</string>
    <string name="saving">Saving…</string>
    <string name="map_view_description">map_view_description</string>
    <string name="manage_your_personal_information">Manage your personal information</string>
    <string name="my_profile">My Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="logout">Logout</string>
    <string name="user_profile">User Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile">profile</string>
    <string name="enter_password_to_confirm">Enter password to confirm:</string>
    <string name="delete_account">Delete Account</string>
    <string name="processing">Processing...</string>
    <string name="sign_up_Button">Sign Up</string>
    <string name="please_wait">Please wait...</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_out">Sign Out</string>
</resources>