<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/her_voice_logo"
            android:contentDescription="@string/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingHorizontal="10dp"
            android:shadowColor="#504E4E"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/sign_up_1"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/create_your_account_to_start_your_journey_with_us"
            android:textColor="@color/dark_pink"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <!-- Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_1"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:background="@drawable/field_label"/>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/gray2"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:background="@drawable/field_label"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/gray2"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />

        <!-- Phone Number -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:background="@drawable/field_label"/>

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="10dp"
            android:textColorHint="@color/gray2"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <!-- Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:background="@drawable/field_label"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password_1"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/gray2"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />

        <!-- Confirm Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_1"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:background="@drawable/field_label"/>

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/gray2"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />

        <!-- Sign Up -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/dark_pink"
            android:padding="8dp"
            android:text="@string/sign_up_2"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:cornerRadius="30dp" />

        <!-- Sign In -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"
                android:textStyle="italic"
                android:textColor="@color/dark_pink"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSignInRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_1"
                android:textColor="@color/dark_pink"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <!-- footer -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hervoice_2025"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:drawableStartCompat="@drawable/ic_logo"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>
