<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:clickable="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- App Logo -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/her_voice_logo" />

        <!-- Title -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#504E4E"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="Sign In"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="with"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_edit_text"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/enter_Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_edit_text"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="PrivateResource" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/forget_your_password"
            android:textSize="15sp" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/dark_pink"
            android:padding="8dp"
            android:text="@string/sign_in"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/tvSignUpRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/pink"
            android:textStyle="bold"
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_margin="15dp"
            android:textSize="18sp" />

        <!-- footer -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/hervoice_2025"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_logo"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>
