<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/your_emergency_contacts"
        android:textColor="@color/dark_pink"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <!-- Contacts List -->

    <LinearLayout
        android:id="@+id/contactsContainer"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/no_contacts_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_contacts_yet"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/icon_bg_3"
        android:layout_marginTop="10dp"
        android:text="@string/add_contact"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/delete_contact_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:layout_marginTop="10dp"
        android:text="@string/delete_contact"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</LinearLayout>
