<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/layout_bg_2">

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/edit_trusted_contact"
            android:textAlignment="center"
            android:textColor="@color/dark_pink"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <!-- Name EditText -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:shadowColor="#504E4E"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/name_add_contact"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="True"
            android:hint="@string/name_add_contact_"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Phone Number EditText -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:shadowColor="#504E4E"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/phone_number_add_contact"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_"
            android:inputType="phone"
            android:autofillHints="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Relationship Spinner -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:shadowColor="#504E4E"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/relationship_add_contact"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/edit_relationship_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="20dp"
            android:padding="12dp" />

        <!-- SMS Alert Switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:shadowColor="#504E4E"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:text="@string/sms_alert_add_contact"
                android:textColor="@color/light_green"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Switch
                android:id="@+id/sms_alert_switch"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:buttonTint="#4CAF50"
                android:checked="true"
                android:drawableTint="#4CAF50"
                android:thumbTint="#1AA617"
                tools:checked="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <!-- Save Button -->

        <!-- footer -->
        <Button
            android:id="@+id/save_contact_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_pink"
            android:padding="12dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hervoice_2025_add_contact"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_logo" />

    </LinearLayout>
</ScrollView>
